--- a/.github/workflows/titan-deploy.yml
+++ b/.github/workflows/titan-deploy.yml
@@ -2,8 +2,8 @@ name: Publish to NPM
 
 on:
   push:
-    branches:
-      - master
+    #branches:
+      #- master
 
 jobs:
   publish:
@@ -30,6 +30,26 @@ jobs:
         working-directory: includes/admin/page-optimizer
         run: npm run build
 
+      - name: Get Latest Version from NPM
+        id: get_latest_version
+        working-directory: includes/admin/page-optimizer
+        run: |
+          LATEST_VERSION=$(npm show $(node -p "require('./package.json').name") version)
+          echo "LATEST_VERSION=$LATEST_VERSION" >> $GITHUB_ENV
+
+      - name: Check for Version Change
+        id: version_check
+        working-directory: includes/admin/page-optimizer
+        run: |
+          CURRENT_VERSION=$(node -p "require('./package.json').version")
+          if [ "$LATEST_VERSION" == "$CURRENT_VERSION" ]; then
+            echo "No version change detected."
+            exit 1
+          else
+            echo "Version change detected."
+          fi
+
       - name: Publish to NPM
+        if: success()
         working-directory: includes/admin/page-optimizer
         run: npm publish
