--- a/includes/admin/page-optimizer/package.json
+++ b/includes/admin/page-optimizer/package.json
@@ -85,6 +85,7 @@
     "pretty-ms": "^8.0.0",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
