--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -276,6 +276,19 @@ jobs:
             sudo docker exec -u root -i ${WP_CONTAINER} sh -c "apt-get update && apt-get install -y git"
           EOF
 
+      - name: Install node and vite in docker container
+        run: |
+          ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa bitnami@${{ secrets.SSH_HOST }} << 'EOF'
+            INSTANCE_ID=${{ github.event.number }}
+            WP_CONTAINER=$(sudo docker ps -q --filter "name=wordpress_${INSTANCE_ID}")
+            echo "Container ID: ${WP_CONTAINER}"
+            sudo docker exec -u root -i ${WP_CONTAINER} sh -c "apt-get update"
+            sudo docker exec -u root -i ${WP_CONTAINER} sh -c "apt-get install -y curl"
+            sudo docker exec -u root -i ${WP_CONTAINER} sh -c "curl -fsSL https://deb.nodesource.com/setup_18.x | bash -"
+            sudo docker exec -u root -i ${WP_CONTAINER} sh -c "apt-get install -y nodejs"
+            sudo docker exec -u root -i ${WP_CONTAINER} sh -c "npm install -g vite"
+          EOF
+
       - name: Clone or Update WordPress Plugin Repository in Docker Container
         run: |
           ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa bitnami@${{ secrets.SSH_HOST }} << 'EOF'
