fix: audit related to settings not loading fix: when clicked on label of settings custom switch not working

--- a/includes/admin/page-optimizer/.env.example
+++ b/includes/admin/page-optimizer/.env.example
@@ -1,2 +1,3 @@
-VITE_OPTIMIZER_URL=https://staging.rapidload.io/
+VITE_OPTIMIZER_URL=https://rapidload.local/
 VITE_SERVER_ROOT=http://rapidload.local/
+VITE_API_ROOT=https://api.rapidload.io
