--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -242,6 +242,25 @@ jobs:
             sudo docker exec -u root -i \${WP_CONTAINER} sh -c "grep -A 2 'RAPIDLOAD_DEV_MODE' /bitnami/wordpress/wp-config.php"
           EOF
 
+      - name: Update RAPIDLOAD_PLUGIN_COMMIT_ID in wp-config.php
+        run: |
+          ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa bitnami@${{ secrets.SSH_HOST }} << EOF
+            set -x
+            INSTANCE_ID=${{ github.event.number }}
+            WP_CONTAINER=\$(sudo docker ps -q --filter "name=wordpress_\${INSTANCE_ID}")
+
+            echo "update RAPIDLOAD_PLUGIN_COMMIT_ID for : \${WP_CONTAINER}"
+            sudo docker exec -u root -i \${WP_CONTAINER} sh -c '
+              if grep -q "RAPIDLOAD_PLUGIN_COMMIT_ID" /bitnami/wordpress/wp-config.php; then
+                sed -i "s/define( \x27RAPIDLOAD_PLUGIN_COMMIT_ID\x27, .*/define( \x27RAPIDLOAD_PLUGIN_COMMIT_ID\x27, \x27${{ github.sha }}\x27 );/" /bitnami/wordpress/wp-config.php;
+              else
+                sed -i "/^\/\*\* Sets up WordPress vars and included files. \*\//i if ( ! defined( \x27RAPIDLOAD_PLUGIN_COMMIT_ID\x27 ) ) { define( \x27RAPIDLOAD_PLUGIN_COMMIT_ID\x27, \x27${{ github.sha }}\x27 ); }" /bitnami/wordpress/wp-config.php;
+              fi
+            '
+            # Check if the constant was successfully updated
+            sudo docker exec -u root -i \${WP_CONTAINER} sh -c "grep -A 2 'RAPIDLOAD_PLUGIN_COMMIT_ID' /bitnami/wordpress/wp-config.php"
+          EOF
+
       - name: Update WP_CACHE in wp-config.php
         if: ${{ github.event.action == 'opened' }}
         run: |
