--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -251,8 +251,8 @@ jobs:
 
             echo "update RAPIDLOAD_PLUGIN_COMMIT_ID for : \${WP_CONTAINER}"
             sudo docker exec -u root -i \${WP_CONTAINER} sh -c '
-              if grep -q "RAPIDLOAD_PLUGIN_COMMIT_ID" /bitnami/wordpress/wp-config.php; then
-                sed -i "s/define( \x27RAPIDLOAD_PLUGIN_COMMIT_ID\x27, .*/define( \x27RAPIDLOAD_PLUGIN_COMMIT_ID\x27, \x27${{ github.sha }}\x27 );/" /bitnami/wordpress/wp-config.php;
+              if grep -q "define( \x27RAPIDLOAD_PLUGIN_COMMIT_ID\x27" /bitnami/wordpress/wp-config.php; then
+                sed -i "s/define( \x27RAPIDLOAD_PLUGIN_COMMIT_ID\x27, \x27.*\x27 );/define( \x27RAPIDLOAD_PLUGIN_COMMIT_ID\x27, \x27${{ github.sha }}\x27 );/" /bitnami/wordpress/wp-config.php;
               else
                 sed -i "/^\/\*\* Sets up WordPress vars and included files. \*\//i if ( ! defined( \x27RAPIDLOAD_PLUGIN_COMMIT_ID\x27 ) ) { define( \x27RAPIDLOAD_PLUGIN_COMMIT_ID\x27, \x27${{ github.sha }}\x27 ); }" /bitnami/wordpress/wp-config.php;
               fi
