--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -242,26 +242,39 @@ jobs:
             sudo docker exec -u root -i \${WP_CONTAINER} sh -c "grep -A 2 'RAPIDLOAD_DEV_MODE' /bitnami/wordpress/wp-config.php"
           EOF
 
-      - name: Update RAPIDLOAD_PLUGIN_COMMIT_ID in wp-config.php
+      - name: Remove RAPIDLOAD_PLUGIN_COMMIT_ID in wp-config.php
         run: |
           ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa bitnami@${{ secrets.SSH_HOST }} << EOF
             set -x
             INSTANCE_ID=${{ github.event.number }}
             WP_CONTAINER=\$(sudo docker ps -q --filter "name=wordpress_\${INSTANCE_ID}")
 
-            echo "Remove and re-add RAPIDLOAD_PLUGIN_COMMIT_ID for : \${WP_CONTAINER}"
+            echo "Removing RAPIDLOAD_PLUGIN_COMMIT_ID for : \${WP_CONTAINER}"
 
             # Remove the existing RAPIDLOAD_PLUGIN_COMMIT_ID line if it exists
             sudo docker exec -u root -i \${WP_CONTAINER} sh -c '
               sed -i "/define( \x27RAPIDLOAD_PLUGIN_COMMIT_ID\x27/d" /bitnami/wordpress/wp-config.php
             '
 
-            # Add the RAPIDLOAD_PLUGIN_COMMIT_ID definition again
+            # Confirm removal
+            sudo docker exec -u root -i \${WP_CONTAINER} sh -c "grep -A 2 'RAPIDLOAD_PLUGIN_COMMIT_ID' /bitnami/wordpress/wp-config.php || echo 'RAPIDLOAD_PLUGIN_COMMIT_ID not found'"
+          EOF
+
+      - name: Add RAPIDLOAD_PLUGIN_COMMIT_ID in wp-config.php
+        run: |
+          ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa bitnami@${{ secrets.SSH_HOST }} << EOF
+            set -x
+            INSTANCE_ID=${{ github.event.number }}
+            WP_CONTAINER=\$(sudo docker ps -q --filter "name=wordpress_\${INSTANCE_ID}")
+
+            echo "Adding RAPIDLOAD_PLUGIN_COMMIT_ID for : \${WP_CONTAINER}"
+
+            # Add the RAPIDLOAD_PLUGIN_COMMIT_ID definition
             sudo docker exec -u root -i \${WP_CONTAINER} sh -c '
               sed -i "/^\/\*\* Sets up WordPress vars and included files. \*\//i if ( ! defined( \x27RAPIDLOAD_PLUGIN_COMMIT_ID\x27 ) ) { define( \x27RAPIDLOAD_PLUGIN_COMMIT_ID\x27, \x27${{ github.sha }}\x27 ); }" /bitnami/wordpress/wp-config.php
             '
 
-            # Check if the constant was successfully added
+            # Confirm addition
             sudo docker exec -u root -i \${WP_CONTAINER} sh -c "grep -A 2 'RAPIDLOAD_PLUGIN_COMMIT_ID' /bitnami/wordpress/wp-config.php"
           EOF
 
