--- a/includes/admin/page-optimizer/package.json
+++ b/includes/admin/page-optimizer/package.json
@@ -130,6 +130,7 @@
     "@typescript-eslint/parser": "5.48.1",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
+    "cross-env": "^7.0.3",
     "esbuild": "^0.23.0",
     "eslint": "8.31.0",
     "eslint-plugin-import": "2.27.4",
