--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -204,7 +204,7 @@ jobs:
           EOF
 
       - name: Set up environment and grant permissions
-        if: ${{ github.event.action == 'opened' }}
+        #if: ${{ github.event.action == 'opened' }}
         run: |
           ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa bitnami@${{ secrets.SSH_HOST }} << EOF
             set -x
@@ -212,11 +212,8 @@ jobs:
             DOMAIN="pr-${INSTANCE_ID}.rapidload.live"
             WP_CONTAINER=\$(sudo docker ps -q --filter "name=wordpress_\${INSTANCE_ID}")
 
-            # Grant 666 permissions to wp-config.php
-            sudo docker exec -u root -i \${WP_CONTAINER} sh -c "chmod 666 /bitnami/wordpress/wp-config.php"
-
-            # Grant 777 permissions to cache folder (or specify desired permission level)
-            sudo docker exec -u root -i \${WP_CONTAINER} sh -c "chmod -R 777 /bitnami/wordpress/wp-content/cache"
+            # Grant 666 permissions to wp-config.php to cache folder
+            sudo docker exec -u root -i \${WP_CONTAINER} sh -c "chmod 666 /bitnami/wordpress/wp-config.php && chmod -R 777 /bitnami/wordpress/wp-content/cache"
           EOF
 
       - name: Update domain in wp-config.php
