--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -203,18 +203,18 @@ jobs:
             sudo docker-compose -f /home/bitnami/wp-\${INSTANCE_ID}/docker-compose.yml logs wordpress
           EOF
 
-      #- name: Set up environment and grant permissions
-        #if: ${{ github.event.action == 'opened' }}
-        #run: |
-          #ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa bitnami@${{ secrets.SSH_HOST }} << EOF
-            #set -x
-            #INSTANCE_ID=${{ github.event.number }}
-            #DOMAIN="pr-${INSTANCE_ID}.rapidload.live"
-            #WP_CONTAINER=\$(sudo docker ps -q --filter "name=wordpress_\${INSTANCE_ID}")
+      - name: Set up environment and grant permissions
+        if: ${{ github.event.action == 'opened' }}
+        run: |
+          ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa bitnami@${{ secrets.SSH_HOST }} << EOF
+            set -x
+            INSTANCE_ID=${{ github.event.number }}
+            DOMAIN="pr-${INSTANCE_ID}.rapidload.live"
+            WP_CONTAINER=\$(sudo docker ps -q --filter "name=wordpress_\${INSTANCE_ID}")
 
             # Grant 666 permissions to wp-config.php to cache folder
-            #sudo docker exec -u root -i \${WP_CONTAINER} sh -c "chmod 666 /bitnami/wordpress/wp-config.php"
-          #EOF
+            sudo docker exec -u root -i \${WP_CONTAINER} sh -c "chmod 666 /bitnami/wordpress/wp-config.php"
+          EOF
 
       - name: Update domain in wp-config.php
         if: ${{ github.event.action == 'opened' }}
