--- a/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
+++ b/.github/workflows/deploy-wordpress-plugin-preview-lightsail.yml
@@ -216,6 +216,19 @@ jobs:
             sudo docker exec -u root -i \${WP_CONTAINER} sh -c "chmod 666 /bitnami/wordpress/wp-config.php"
           EOF
 
+      - name: Create cache folder and grant 777 permissions
+        if: ${{ github.event.action == 'opened' }}
+        run: |
+          ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa bitnami@${{ secrets.SSH_HOST }} << EOF
+            set -x
+            INSTANCE_ID=${{ github.event.number }}
+            DOMAIN="pr-${INSTANCE_ID}.rapidload.live"
+            WP_CONTAINER=\$(sudo docker ps -q --filter "name=wordpress_\${INSTANCE_ID}")
+
+            # Create cache folder if it doesn't exist and grant 777 permissions
+            sudo docker exec -u root -i \${WP_CONTAINER} sh -c "if [ ! -d /bitnami/wordpress/wp-content/cache ]; then mkdir -p /bitnami/wordpress/wp-content/cache; fi && chmod -R 777 /bitnami/wordpress/wp-content/cache"
+          EOF
+
       - name: Update domain in wp-config.php
         if: ${{ github.event.action == 'opened' }}
         run: |
