feat: add hotjar, google analytics

--- a/includes/admin/page-optimizer/package.json
+++ b/includes/admin/page-optimizer/package.json
@@ -47,6 +47,7 @@
     "@fontsource-variable/inter": "^5.0.19",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@hotjar/browser": "^1.0.9",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -86,6 +87,7 @@
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.417.0",
+    "nextjs-google-analytics": "^2.3.7",
     "pretty-bytes": "^6.1.1",
     "pretty-ms": "^8.0.0",
     "prism-react-renderer": "^2.3.1",
@@ -128,6 +130,7 @@
     "@types/react-is": "^18.3.0",
     "@types/semver-compare": "^1.0.3",
     "@types/underscore": "^1.11.15",
+    "@types/validator": "^13.12.2",
     "@types/webfontloader": "^1.6.38",
     "@typescript-eslint/eslint-plugin": "5.48.1",
     "@typescript-eslint/parser": "5.48.1",
