feat: add faq section

--- a/includes/admin/page-optimizer/tsconfig.json
+++ b/includes/admin/page-optimizer/tsconfig.json
@@ -33,6 +33,9 @@
       "lib/*": [
         "src/lib/*"
       ],
+      "@/lib/*": [
+        "src/lib/*"
+      ],
       "hooks/*": [
         "src/hooks/*"
       ]
