--- a/.github/workflows/rapidload-ai-plugin-deploy.yml
+++ b/.github/workflows/rapidload-ai-plugin-deploy.yml
@@ -59,6 +59,6 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
           SOURCE_DIR: "update.json"
-          DEST_DIR: "updates/unusedcss/"
+          DEST_DIR: "plugins/unusedcss/"
       
 
